feat: update existing analytics and create vendor analytics endpoint
